// Basic proto file to handle database interactions
syntax = "proto3";
package dataroute;

option go_package = "./Routes";
import "google/protobuf/any.proto";

service DataRoute {
    rpc GetTable (TableRequest) returns (TableResponse) {}
}

message TableRequest {
    string name = 1;
}

message TableResponse {
    string name = 1;
    google.protobuf.Any value = 2;
}